hphp/test/zend/good/tests-classes/interface_method.php.exp
HipHop Fatal error: syntax error, unexpected ';', expecting T_FUNCTION in hphp/test/zend/good/tests-classes/interface_method.php on line 4
